cmake_minimum_required(VERSION 3.5)

project(ch02 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)

add_executable(fig_2_03 fig_2_03.cpp)
target_link_libraries(fig_2_03 tbb)

add_executable(fig_2_04 fig_2_04.cpp)
target_link_libraries(fig_2_04 tbb)

add_executable(fig_2_05 fig_2_05.cpp)
target_link_libraries(fig_2_05 tbb)

add_executable(fig_2_06 fig_2_06.cpp)
target_link_libraries(fig_2_06 tbb)

add_executable(fig_2_07 fig_2_07.cpp)
target_link_libraries(fig_2_07 tbb)

add_executable(fig_2_08 fig_2_08.cpp)
target_link_libraries(fig_2_08 tbb)

add_executable(fig_2_10 fig_2_10.cpp)
target_link_libraries(fig_2_10 tbb)

add_executable(fig_2_11 fig_2_11.cpp)
target_link_libraries(fig_2_11 tbb)

add_executable(fig_2_12 fig_2_12.cpp)
target_link_libraries(fig_2_12 tbb)

add_executable(fig_2_14 fig_2_14.cpp)
target_link_libraries(fig_2_14 tbb)

add_executable(fig_2_15 fig_2_15.cpp)
target_link_libraries(fig_2_15 tbb)

add_executable(fig_2_16 fig_2_16.cpp)
target_link_libraries(fig_2_16 tbb)

add_executable(fig_2_17 fig_2_17.cpp)
target_link_libraries(fig_2_17 tbb)

add_executable(fig_2_18 fig_2_18.cpp)
target_link_libraries(fig_2_18 tbb)

add_executable(fig_2_19 fig_2_19.cpp)
target_link_libraries(fig_2_19 tbb)

add_executable(fig_2_20 fig_2_20.cpp)
target_link_libraries(fig_2_20 tbb)

add_executable(fig_2_22 fig_2_22.cpp)
target_link_libraries(fig_2_22 tbb)

add_executable(fig_2_23 fig_2_23.cpp)
target_link_libraries(fig_2_23 tbb)

add_executable(fig_2_24 fig_2_24.cpp)
target_link_libraries(fig_2_24 tbb)

add_executable(fig_2_27 fig_2_27.cpp)
target_link_libraries(fig_2_27 tbb)

add_executable(fig_2_28 fig_2_28.cpp)
target_link_libraries(fig_2_28 tbb)

add_executable(fig_2_30 fig_2_30.cpp)
target_link_libraries(fig_2_30 tbb)
